--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,32 +1,80 @@
 body {
+    /* Old browsers */
+    background: #141E30;
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(-45deg, #35577D, #141E30);
     margin: 0;
     padding: 0;
+  }
+
+  h1 {
+    text-align: center;
+    color: #FFF;
+    font-family: Georgia;
+    font-size: 2em;
+    padding-top: 100px;
+    width: 100%;
+  }
+.main-banner {
+    background-image: url(https://www.example.com/image.jpg);
 }
 
+h2 {
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+    font-size: 40px;
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 11px;
+    color: #FFF;
+    text-align: center;
+}
+
+
 p {
-    font-family:Arial, Helvetica, sans-serif
-   
+    font-family:Arial, Helvetica, sans-serif;
+    color: #FFF;
+    text-align: center;
+}
+ul {
+    text-align: center;
+    color: #FFF;
+    font-family: Georgia;
+    font-size: 2em;
+    padding-top: 100px;
+    width: 100%;
 }
 
 .content {
-    padding: 70px;
+    padding: 90px;
+    text-align: center;
+    color: #FFF;
 }
 
-.profissao{     
-    font-family: Helvetica;
-    color: rgba(255, 255, 255, 0.5);
-    float: right ;
-    font-size: 14px;
-    padding-top: 500px;
-    text-transform: uppercase;
-}
+ h3 { font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif; 
+    font-size: 14px; 
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    line-height: 15.4px;
+    color: #FFF;
+    text-align: center; } 
+     
 
 .perfil-img{
     -webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
     -moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
     box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
     float: left;
-    width: 50px;
+    width: 150px;
+  }
+
+  .image {
+    background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-4/htmlcss1-img_soccer.jpeg");
+    background-size: auto;
+    background-position: center;
+    height: 300px;
   }
   
